--- a/client/src/app/components/problem-list/problem-list.component.html
+++ b/client/src/app/components/problem-list/problem-list.component.html
@@ -1,8 +1,20 @@
 <div class="container">
-  <div class="list-group">
-    <a class="list-group-item" *ngFor="let problem of problems" [routerLink]="['/problems', problem.id]">
-      <span>{{problem.difficulty}}</span>
-      <strong>{{problem.id}}. {{problem.name}}</strong>
-    </a>
-  </div>
+  <table class="table table-striped table-hover">
+      <thead>
+        <tr >
+          <th scope="col">#</th>
+          <th scope="col">Title</th>
+          <th scope="col">Acceptance</th>
+          <th scope="col">Difficulty</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let problem of problems">
+          <th scope="row">{{problem.id}}</th>
+          <td><a [routerLink]="['/problems', problem.id]">{{problem.name}}</a></td>
+          <td>{{problem.acceptance * 100 + '%'}}</td>
+          <td><span class="badge badge-pill badge-secondary diff-text {{'diff-' + problem.difficulty}}">{{problem.difficulty}}</span></td>      
+        </tr>
+      </tbody>
+    </table>
 </div>
