--- a/client/src/app/components/problem-list/problem-list.component.html
+++ b/client/src/app/components/problem-list/problem-list.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-new-problem></app-new-problem>
   <table class="table table-striped table-hover">
       <thead>
         <tr >
