replace mock data with http request.

--- a/client/src/app/components/problem-list/problem-list.component.html
+++ b/client/src/app/components/problem-list/problem-list.component.html
@@ -14,7 +14,7 @@
           <th scope="row">{{problem.id}}</th>
           <td><a [routerLink]="['/problems', problem.id]">{{problem.name}}</a></td>
           <td>{{problem.acceptance * 100 + '%'}}</td>
-          <td><span class="badge badge-pill badge-secondary diff-text {{'diff-' + problem.difficulty}}">{{problem.difficulty}}</span></td>      
+          <td><span class="badge badge-pill badge-secondary diff-text {{'diff-' + problem.difficulty.toLowerCase()}}">{{problem.difficulty}}</span></td>      
         </tr>
       </tbody>
     </table>
