change default select difficulty.

--- a/client/src/app/components/new-problem/new-problem.component.html
+++ b/client/src/app/components/new-problem/new-problem.component.html
@@ -35,6 +35,7 @@
         name="difficulty" 
         [(ngModel)]="newProblem.difficulty"
       >
+        <option value="" disabled selected>Select difficulty</option>
         <option *ngFor="let difficulty of difficulties" [value]="difficulty">
           {{difficulty}}
         </option>
