--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,31 +1,33 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">{{title}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    </form>
-  </div>
-
-  <ul class="nav navbar-nav navbar-right">
-    <li>
-      <form class="navbar-form">
-        <button type="button" class="btn btn-primary" *ngIf="!auth.isAuthenticated()" (click)="login()">Sign in</button>
+  <div class="container">
+    <a class="navbar-brand" href="#">{{title}}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       </form>
-    </li>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{username}} <span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <li><a routerLink="/profile">My Profile</a></li>
-        <li><a href="#">My Favorites</a></li>
-        <li><a href="#">My Submissions</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#" *ngIf="auth.isAuthenticated()" (click)="logout()">Log Out</a></li>
-      </ul>
-    </li>
-  </ul>
-
+    </div>
+  
+    <ul class="nav navbar-nav navbar-right">
+      <li>
+        <form class="navbar-form">
+          <button type="button" class="btn btn-primary" *ngIf="!auth.isAuthenticated()" (click)="login()">Sign in</button>
+        </form>
+      </li>
+      <li class="dropdown" *ngIf="auth.isAuthenticated()">
+        <div ngbDropdown class="d-inline-block">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{username}}</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <button class="dropdown-item" routerLink="/profile">My Profile</button>
+              <button class="dropdown-item">My Favorites</button>
+              <button class="dropdown-item">My Submissions</button>
+              <button class="dropdown-item" (click)="logout()">Log Out</button>
+            </div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </nav>
