--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,30 +1,29 @@
 <div class="container">
+  <ngb-alert *ngIf="isAlertVisible" type="success" (close)="closeAlert(alert)">
+      <strong>Success!</strong> We've just sent you an email to reset your password.
+  </ngb-alert>
 
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Personal Information</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Change Password</a>
-    </li>
-  </ul>
-  <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" class="form-control" id="email"
-        name="email" disabled value="{{profile?.name}}">
-      </div>
-      <div class="form-group">
-        <label for="username">User name</label>
-        <input type="text" class="form-control" id="usernmae"
-        name="username" disabled value="{{ profile?.nickname }}">
-      </div>
-    </div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-        <form class="navbar-form">
-          <button type="button" class="btn btn-large btn-success" (click)="resetPassword()">Reset password via email</button>
-        </form>
-    </div>
-  </div>
+  <ngb-tabset>
+      <ngb-tab title="Personal Information">
+        <ng-template ngbTabContent>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" id="email"
+            name="email" disabled value="{{profile?.name}}">
+          </div>
+          <div class="form-group">
+            <label for="username">User name</label>
+            <input type="text" class="form-control" id="usernmae"
+            name="username" disabled value="{{ profile?.nickname }}">
+          </div>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab title="Change Password">
+        <ng-template ngbTabContent>
+          <form class="navbar-form">
+              <button type="button" class="btn btn-large btn-success" (click)="resetPassword()">Reset password via email</button>
+          </form>
+        </ng-template>
+      </ngb-tab>
+    </ngb-tabset>
 </div>
