add search problem feature.

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -6,8 +6,8 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" (ngSubmid)="searchProblem()">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [formControl]="seachBox">
       </form>
     </div>
   
