--- a/client/src/app/components/editor/editor.component.html
+++ b/client/src/app/components/editor/editor.component.html
@@ -1,35 +1,38 @@
-<section>
+<section class="container">
   <header class="editor-header">
-    <select class="form-control pull-left lang-select" name="language" [(ngModel)]="language" (change)="setLanguage(language)">
-      <option *ngFor="let language of languages" [value]="language">
-        {{language}}
-      </option>
-    </select>
+    <div class="row justify-content-between">
+      <div class="col-4">
+        <select class="form-control pull-left lang-select" name="language" [(ngModel)]="language" (change)="setLanguage(language)">
+          <option *ngFor="let language of languages" [value]="language">
+            {{language}}
+          </option>
+        </select>
+      </div>
 ​
     <!-- reset button -->
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">
-      <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-    </button>
-​
-    <!-- Modal -->
-    <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Reset</h4>
-          </div>
-          <div class="modal-body">
-            You will lose current code in the window, are you sure?
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success" data-dismiss="modal" (click)="resetEditor()">Reset</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-          </div>
+
+      <ng-template #resetModel let-c="close" let-d="dismiss">
+        <div class="modal-header">
+          <h4 class="modal-title">Reset to default code definition</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-      </div>
-    </div> -->
+        <div class="modal-body">
+          Are you sure you want to reset your code?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-dark" (click)="d('Cancel click')">Cancel</button>
+          <button type="button" class="btn btn-outline-danger" (click)="c('Reset')">Reset</button>
+        </div>
+      </ng-template>
+      <div class="col-1">
+        <button type="button" class="btn btn-outline-danger" (click)="open(resetModel)">
+          <i class="fas fa-reply-all"></i>
+        </button>
+      </div>  
+    </div>
   </header>
 
   <div class="row">
